[gd_scene load_steps=38 format=3 uid="uid://qcjh1t51akmr"]

[ext_resource type="Script" path="res://scene/front_door/FrontDoor.cs" id="1_plewj"]
[ext_resource type="Texture2D" uid="uid://dnas6epfjca3m" path="res://asset/app/icon/front_door.png" id="2_jf1ga"]
[ext_resource type="Texture2D" uid="uid://q3nk4e6vew7r" path="res://iconTxt.png" id="3_2iugp"]
[ext_resource type="Shader" path="res://asset/shader/gradient/gradient_step.gdshader" id="3_etpfy"]
[ext_resource type="Theme" uid="uid://bjqkhcyimcs7y" path="res://asset/theme/front_door/front_door.tres" id="4_lmulx"]
[ext_resource type="StyleBox" uid="uid://c4tgqlb0ttacc" path="res://asset/theme/front_door/stylebox/front_door_panel_background.tres" id="5_a75k4"]
[ext_resource type="Texture2D" uid="uid://cpbi4wkt4nu1l" path="res://asset/material/file/add.svg" id="6_clkik"]
[ext_resource type="Script" path="res://scene/front_door/ui/front_door_background_animator.gd" id="6_cmu6i"]
[ext_resource type="Script" path="res://scene/front_door/ui/quickbar_error_label.gd" id="9_mpvuk"]
[ext_resource type="Texture2D" uid="uid://c8c0n0e4fw7mk" path="res://asset/material/file/open_new.svg" id="10_rxr5w"]
[ext_resource type="Texture2D" uid="uid://cwis7h5dommn3" path="res://asset/app/icon/romfs_accessor_config.png" id="10_sqwg3"]
[ext_resource type="PackedScene" uid="uid://c5b01vfsh7pwp" path="res://scene/home/home.tscn" id="11_ajwfd"]
[ext_resource type="PackedScene" uid="uid://dwpxrep18y4wy" path="res://scene/front_door/dot/playable.tscn" id="11_h3uc8"]
[ext_resource type="Texture2D" uid="uid://dj4axx0d5mbe4" path="res://asset/material/file/recent.svg" id="11_t4cui"]
[ext_resource type="PackedScene" uid="uid://cio2gvsywxhso" path="res://scene/front_door/load/project_loading.tscn" id="12_my55f"]
[ext_resource type="Script" path="res://scene/front_door/ui/menu_recent.gd" id="12_uh126"]
[ext_resource type="StyleBox" uid="uid://btyn7bgrl1pi" path="res://asset/theme/common/stylebox/common_panel_tooltip.tres" id="13_npgqm"]
[ext_resource type="Script" path="res://scene/front_door/ui/new_project_panel.gd" id="14_4g88j"]
[ext_resource type="Texture2D" uid="uid://cjpqxf5df6rr2" path="res://asset/app/icon/credit.png" id="14_mr0wr"]
[ext_resource type="Texture2D" uid="uid://evl66l6xykck" path="res://asset/app/icon/update.png" id="15_h6jnw"]
[ext_resource type="FontFile" uid="uid://ck8hgmw2q13d2" path="res://asset/font/FontRodinEB.otf" id="15_xr5ea"]
[ext_resource type="Script" path="res://addons/wiki/access/WikiAccessButton.cs" id="16_06dea"]
[ext_resource type="Script" path="res://scene/version/notify/version_update_button.gd" id="16_8ntwn"]
[ext_resource type="Script" path="res://scene/common/option/LangPicker.cs" id="16_qq0jv"]
[ext_resource type="Texture2D" uid="uid://2tktgsvkpti8" path="res://asset/material/wiki/docs.svg" id="17_wxtt3"]
[ext_resource type="Texture2D" uid="uid://xpef8b4oi3ps" path="res://asset/app/icon/settings.png" id="17_yn102"]
[ext_resource type="Resource" uid="uid://jvfra3r2fdpd" path="res://addons/wiki/paths/default.tres" id="24_pm7wk"]
[ext_resource type="Script" path="res://scene/front_door/ui/debug_info_display.tres.gd" id="26_d4gfb"]
[ext_resource type="Theme" uid="uid://dbung3qmbw5gp" path="res://asset/theme/common/app_common.tres" id="26_es3an"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kq5y5"]
shader = ExtResource("3_etpfy")
shader_parameter/first_color = Color(0.137255, 0.184314, 0.262745, 1)
shader_parameter/second_color = Color(0.054902, 0.0745098, 0.105882, 1)
shader_parameter/position = 0.5
shader_parameter/color_angle = 1.571
shader_parameter/stepIntensify = 12

[sub_resource type="GDScript" id="GDScript_pf6nj"]
script/source = "extends Control

func _ready():
	custom_minimum_size = $Quickbar.size
"

[sub_resource type="LabelSettings" id="LabelSettings_bjmaa"]
font_color = Color(1, 0.23, 0.23, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x0bb7"]
font = ExtResource("15_xr5ea")
font_size = 21
font_color = Color(0.988235, 0.792157, 0.27451, 1)
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ry8px"]
font_color = Color(1, 0.43, 0.43, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdqeg"]

[sub_resource type="GDScript" id="GDScript_8daaw"]
script/source = "extends OptionButton

signal id_pressed(id: int)

func _item_selected(index: int) -> void:
	id_pressed.emit(get_item_id(index))
"

[sub_resource type="FontVariation" id="FontVariation_fyywr"]
variation_transform = Transform2D(1, 0.1, 0, 1, 0, 0)

[node name="FrontDoor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_plewj")
AppName = "FrontDoor"
AppTaskbarTitle = "Welcome"
AppIcon = ExtResource("2_jf1ga")
AppFlags = 6

[node name="Content" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_kq5y5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_lmulx")
theme_override_styles/panel = ExtResource("5_a75k4")
script = ExtResource("6_cmu6i")

[node name="Quickbar_Content" type="HBoxContainer" parent="Content"]
z_index = 2
layout_mode = 2
theme_override_constants/separation = 16

[node name="QuickbarHolder" type="Control" parent="Content/Quickbar_Content"]
custom_minimum_size = Vector2(295, 0)
layout_mode = 2
script = SubResource("GDScript_pf6nj")

[node name="Quickbar" type="VBoxContainer" parent="Content/Quickbar_Content/QuickbarHolder"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 256.0
grow_vertical = 2
rotation = 0.0349066
pivot_offset = Vector2(0, 402)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 17

[node name="Logo" type="Control" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar"]
custom_minimum_size = Vector2(256, 178)
layout_mode = 2

[node name="Texture_Logo" type="TextureRect" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar/Logo"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
offset_right = 256.0
offset_bottom = 182.857
rotation = 0.0523599
pivot_offset = Vector2(128, 91.428)
texture = ExtResource("3_2iugp")
expand_mode = 5
stretch_mode = 5

[node name="Button_New" type="Button" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "NEW_PROJECT"
icon = ExtResource("6_clkik")
icon_alignment = 2

[node name="Button_Open" type="Button" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "OPEN_PROJECT"
icon = ExtResource("10_rxr5w")
icon_alignment = 2

[node name="Menu_Recent" type="MenuButton" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "RECENT_PROJECTS"
icon = ExtResource("11_t4cui")
flat = false
icon_alignment = 2
item_count = 1
popup/item_0/text = "FRONT_DOOR_RECENT_PROJECTS_CLEAR_HISTORY"
script = ExtResource("12_uh126")

[node name="Shortcuts" type="HBoxContainer" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="Button_Settings" type="Button" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts"]
layout_mode = 2
tooltip_text = "BUTTON_TOOLTIP_OPEN_ENGINE_SETTINGS"
mouse_default_cursor_shape = 2
icon = ExtResource("17_yn102")

[node name="Button_RomfsConfig" type="Button" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts"]
layout_mode = 2
tooltip_text = "BUTTON_TOOLTIP_OPEN_ROMFS_CONFIG"
mouse_default_cursor_shape = 2
icon = ExtResource("10_sqwg3")

[node name="Button_Contributors" type="Button" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts"]
layout_mode = 2
tooltip_text = "BUTTON_TOOLTIP_OPEN_CREDITS_PAGE"
mouse_default_cursor_shape = 2
icon = ExtResource("14_mr0wr")

[node name="Button_Update" type="Button" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts"]
layout_mode = 2
tooltip_text = "BUTTON_TOOLTIP_OPEN_GITHUB_FOR_UPDATE"
mouse_default_cursor_shape = 2
icon = ExtResource("15_h6jnw")
script = ExtResource("16_8ntwn")

[node name="HTTPRequest" type="HTTPRequest" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts/Button_Update"]
use_threads = true

[node name="Label_OpenError" type="Label" parent="Content/Quickbar_Content/QuickbarHolder/Quickbar"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_bjmaa")
horizontal_alignment = 1
autowrap_mode = 3
script = ExtResource("9_mpvuk")

[node name="VSep" type="VSeparator" parent="Content/Quickbar_Content"]
visible = false
layout_mode = 2

[node name="NewProject" type="PanelContainer" parent="Content/Quickbar_Content"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("13_npgqm")
script = ExtResource("14_4g88j")

[node name="Margin" type="MarginContainer" parent="Content/Quickbar_Content/NewProject"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 14

[node name="Scroll" type="ScrollContainer" parent="Content/Quickbar_Content/NewProject/Margin"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBox_Options" type="VBoxContainer" parent="Content/Quickbar_Content/NewProject/Margin/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Label_Header" type="Label" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
layout_mode = 2
text = "FRONT_DOOR_NEW_PROJECT_MENU_HEADER"
label_settings = SubResource("LabelSettings_x0bb7")
horizontal_alignment = 1

[node name="HSep0" type="HSeparator" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label_DirectoryHeader" type="Label" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
layout_mode = 2
text = "FRONT_DOOR_NEW_PROJECT_DIRECTORY_HEADER"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label_Directory" type="Label" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
visible = false
layout_mode = 2
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label_InvalidDirectory" type="Label" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "FRONT_DOOR_NEW_PROJECT_INVALID_DIRECTORY"
label_settings = SubResource("LabelSettings_ry8px")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button_Directory" type="Button" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
layout_mode = 2
text = "FRONT_DOOR_NEW_PROJECT_SELECT_DIRECTORY"
icon = ExtResource("10_rxr5w")
icon_alignment = 2

[node name="HSep1" type="HSeparator" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_xdqeg")

[node name="Label_VersionHeader" type="Label" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
layout_mode = 2
text = "FRONT_DOOR_NEW_PROJECT_VERSION_SELECT_HEADER"
horizontal_alignment = 1

[node name="Option_Version" type="OptionButton" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
alignment = 1
selected = 0
item_count = 6
popup/item_0/text = "FRONT_DOOR_PROJECT_VERSION_INVALID_VERSION"
popup/item_1/text = "FRONT_DOOR_PROJECT_VERSION_V100"
popup/item_1/id = 100
popup/item_2/text = "FRONT_DOOR_PROJECT_VERSION_V101"
popup/item_2/id = 101
popup/item_3/text = "FRONT_DOOR_PROJECT_VERSION_V110"
popup/item_3/id = 110
popup/item_4/text = "FRONT_DOOR_PROJECT_VERSION_V120"
popup/item_4/id = 120
popup/item_5/text = "FRONT_DOOR_PROJECT_VERSION_V130"
popup/item_5/id = 130
script = SubResource("GDScript_8daaw")

[node name="HSep2" type="HSeparator" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_xdqeg")

[node name="Label_DefaultLang" type="Label" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
layout_mode = 2
text = "FRONT_DOOR_NEW_PROJECT_DEFAULT_LANGUAGE_HEADER"
horizontal_alignment = 1

[node name="Option_DefaultLang" type="OptionButton" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
alignment = 1
script = ExtResource("16_qq0jv")

[node name="HSep3" type="HSeparator" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_xdqeg")

[node name="Button_Create" type="Button" parent="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 58)
layout_mode = 2
size_flags_vertical = 0
text = "FRONT_DOOR_NEW_PROJECT_CREATE_BUTTON"
icon = ExtResource("6_clkik")
icon_alignment = 2

[node name="Side_Content" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 8

[node name="WikiAccess" type="Button" parent="Content/Side_Content"]
self_modulate = Color(1, 1, 1, 0.929412)
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "FRONT_DOOR_WIKI_ACCESS_BUTTON_TOOLTIP"
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 28
theme_override_font_sizes/font_size = 14
text = "FRONT_DOOR_WIKI_ACCESS_BUTTON"
icon = ExtResource("17_wxtt3")
script = ExtResource("16_06dea")
WikiTarget = ExtResource("24_pm7wk")

[node name="DotPlayable" type="Control" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
mouse_filter = 1

[node name="DotPlayable" parent="DotPlayable" instance=ExtResource("11_h3uc8")]

[node name="Label_Debug" type="RichTextLabel" parent="."]
self_modulate = Color(1, 1, 1, 0.447059)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -16.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 10
theme = ExtResource("26_es3an")
theme_override_constants/line_separation = 0
theme_override_fonts/normal_font = SubResource("FontVariation_fyywr")
theme_override_font_sizes/italics_font_size = 10
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
fit_content = true
hint_underlined = false
script = ExtResource("26_d4gfb")

[node name="Dialog_NewProject" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
size = Vector2i(352, 180)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="Dialog_OpenProject" type="FileDialog" parent="."]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [PackedStringArray("home", "project_loading"), [ExtResource("11_ajwfd"), ExtResource("12_my55f")]]

[connection signal="NewProjectInvalidPath" from="." to="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Label_InvalidDirectory" method="show"]
[connection signal="NewProjectPath" from="." to="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Label_Directory" method="set_text"]
[connection signal="NewProjectPath" from="." to="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Label_Directory" method="show" unbinds=1]
[connection signal="NewProjectPath" from="." to="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Label_InvalidDirectory" method="hide" unbinds=1]
[connection signal="OpenProject" from="." to="Content/Quickbar_Content/QuickbarHolder/Quickbar/Menu_Recent" method="_on_front_door_open_project"]
[connection signal="OpenProjectFailed" from="." to="Content/Quickbar_Content/QuickbarHolder/Quickbar/Menu_Recent" method="_on_front_door_open_project_failed"]
[connection signal="pressed" from="Content/Quickbar_Content/QuickbarHolder/Quickbar/Button_New" to="Content/Quickbar_Content/NewProject" method="set_visibility"]
[connection signal="pressed" from="Content/Quickbar_Content/QuickbarHolder/Quickbar/Button_Open" to="Dialog_OpenProject" method="popup"]
[connection signal="open_recent_project" from="Content/Quickbar_Content/QuickbarHolder/Quickbar/Menu_Recent" to="." method="OnDialogOpenProjectPathSelected"]
[connection signal="pressed" from="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts/Button_Settings" to="." method="OpenEngineSettingsApp"]
[connection signal="pressed" from="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts/Button_RomfsConfig" to="." method="ForceOpenRomfsAccessorApp"]
[connection signal="pressed" from="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts/Button_Contributors" to="." method="OpenContributorPage"]
[connection signal="launch_update" from="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts/Button_Update" to="." method="OnLaunchApplicationUpdater"]
[connection signal="request_completed" from="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts/Button_Update/HTTPRequest" to="Content/Quickbar_Content/QuickbarHolder/Quickbar/Shortcuts/Button_Update" method="_on_request_completed"]
[connection signal="pressed" from="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Button_Directory" to="Dialog_NewProject" method="popup"]
[connection signal="id_pressed" from="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Option_Version" to="." method="OnNewProjectVersionSelected"]
[connection signal="item_selected" from="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Option_Version" to="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Option_Version" method="_item_selected"]
[connection signal="pressed" from="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Option_Version" to="." method="OnNewProjectVersionButtonPressed"]
[connection signal="LangSelectedByEngine" from="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Option_DefaultLang" to="." method="OnNewProjectDefaultLangSelected"]
[connection signal="LangSelectedByUser" from="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Option_DefaultLang" to="." method="OnNewProjectDefaultLangSelected"]
[connection signal="pressed" from="Content/Quickbar_Content/NewProject/Margin/Scroll/VBox_Options/Button_Create" to="." method="OnNewProjectCreate"]
[connection signal="dir_selected" from="Dialog_NewProject" to="." method="OnDialogNewProjectPathSelected"]
[connection signal="dir_selected" from="Dialog_OpenProject" to="." method="OnDialogOpenProjectPathSelected"]
